# Distributed under the MIT software license, see the accompanying
# file LICENSE or http://www.opensource.org/licenses/mit-license.php.\
[package]
name = "qrllib"
version = "0.1.0"
edition = "2021"
authors = ["Liam Arzola <liam0215@gmail.edu>"]

[lib]
name = "qrllib"
path = "src/lib.rs"

[dependencies]
pqcrypto-kyber = "0.7.3"
pqcrypto-dilithium = "0.4.4"
pqcrypto-traits = "0.3.4"
